--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Embedded Form</title>
+     
+        <title>"Bishwo karki | Computer Engineer"</title>
     </head>
     <body>
         <div class="visme_d" data-title="example" data-url="mxg793q8-example?fullPage=true" data-domain="forms" data-full-page="true" data-min-height="100vh" data-form-id="25514"></div>
