--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <html lang="en">
     <head>
      
-        <title>"Bishwo karki | Computer Engineer"</title>
+        <title>Bishwo karki | Computer Engineer</title>
     </head>
     <body>
         <div class="visme_d" data-title="example" data-url="mxg793q8-example?fullPage=true" data-domain="forms" data-full-page="true" data-min-height="100vh" data-form-id="25514"></div>
