--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             </ul>
         </nav>
         <div class="header-content">
-            <img src="https://i.imgur.com/I0LmAjC.png" alt="Profile Photo of Jane">
-            <h1>Hi, my name is Jane</h1>
-            <p>Web Developer | Designer | Tech Enthusiast</p>
+            <img src="/Users/bishwokarki/Portfolio/WEBsite/logo.jpg" alt="Profile Photo of Bishwo">
+            <h1>Hi, my name is Bishwo Karki</h1>
+            <p>Mobile Developer | Designer | Tech Enthusiast</p>
         </div>
     </header>
     <main>
         <section id="about">
             <h2>~ About Me ~</h2>
-            <img src="https://i.imgur.com/Xo57zMO.jpg" alt="Jane's Profile" class="profile-photo">
-            <p>Hello there! I'm a Front-end Developer and aspiring App Developer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum! :)</p>
+            <img src="/Users/bishwokarki/Portfolio/WEBsite/me.JPG" alt="Bishwo's Profile" class="profile-photo">
+            <p>I love to solve problems using technology that improves user’s life on a major scale. Over the last several years, I have been developing and leading various mobile apps in different areas.
+            <p>Highly motivated and technically proficient Software Engineer with a strong foundation ni software development principles and a passion for problem-solving. Skilled ni multiple programming languages and dedicated to delivering high-quality software solutions. Eager to contribute to dynamic development teams and expand my knowledge ni the field.</p>
             </section>
         <section id="portfolio">
             <h2>~ My Work ~</h2>
@@ -40,8 +40,6 @@
             <button class="btn btn-default td-btn outline white">Send me a message!</button>
         </section>
     </main>
-    <footer>
-        <p>Copyright © 2023 Jane Doe — All Rights Reserved</p>
-    </footer>
+   
 </body>
 </html>
