--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ul>
         </nav>
         <div class="header-content">
-            <img src="/Users/bishwokarki/Portfolio/WEBsite/logo.jpg" alt="Profile Photo of Bishwo">
+            <img src="logo.jpg" alt="Profile Photo of Bishwo">
             <h1>Hi, my name is Bishwo Karki</h1>
             <p>Mobile Developer | Designer | Tech Enthusiast</p>
         </div>
@@ -24,7 +24,7 @@
     <main>
         <section id="about">
             <h2>~ About Me ~</h2>
-            <img src="/Users/bishwokarki/Portfolio/WEBsite/me.JPG" alt="Bishwo's Profile" class="profile-photo">
+            <img src="me.jpg" alt="Bishwo's Profile" class="profile-photo">
             <p>I love to solve problems using technology that improves user’s life on a major scale. Over the last several years, I have been developing and leading various mobile apps in different areas.
             <p>Highly motivated and technically proficient Software Engineer with a strong foundation ni software development principles and a passion for problem-solving. Skilled ni multiple programming languages and dedicated to delivering high-quality software solutions. Eager to contribute to dynamic development teams and expand my knowledge ni the field.</p>
             </section>
