--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Engineer</title>
+    <title>Bishwo Karki</title>
+    <meta name="author" content="Bishwo Karki">
+     <meta name="keywords" content="Bishwo, Karki, Binaya">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
