--- a/index.html
+++ b/index.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bishwo Karki</title>
-    <meta name="author" content="Bishwo Karki">
-     <meta name="keywords" content="Bishwo, Karki, Binaya">
-    
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bishwo Karki | Mobile Developer & Tech Enthusiast</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Bishwo Karki is a mobile developer, designer, and tech enthusiast building innovative, user-centric mobile apps." />
+  <meta name="keywords" content="Bishwo Karki, Mobile Developer, Flutter, Software Engineer, Portfolio, Tech Enthusiast, GitHub Pages" />
+  <meta name="author" content="Bishwo Karki" />
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Bishwo Karki | Mobile Developer Portfolio" />
+  <meta property="og:description" content="Explore Bishwo Karki's mobile app projects, design work, and contact info. Passionate about tech and creative solutions." />
+  <meta property="og:image" content="https://yourusername.github.io/logo.jpg" />
+  <meta property="og:url" content="https://yourusername.github.io/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Bishwo Karki | Mobile Developer Portfolio" />
+  <meta name="twitter:description" content="Discover apps and projects built by Bishwo Karki, a passionate mobile developer and tech enthusiast." />
+  <meta name="twitter:image" content="https://yourusername.github.io/logo.jpg" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://yourusername.github.io/" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class="header-background">
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="header-content">
-            <img src="logo.jpg" alt="Profile Photo of Bishwo">
-            <h1>Hi, my name is Bishwo Karki</h1>
-            <p>Mobile Developer | Designer | Tech Enthusiast</p>
-        </div>
-    </header>
-    <main>
-        <section id="about">
-            <h2>~ About Me ~</h2>
-            <img src="me.jpg" alt="Bishwo's Profile" class="profile-photo">
-         
-            <p>I love to solve problems using technology that improves user’s life on a major scale. Over the last several years, I have been developing and leading various mobile apps in different areas.
-            <p>Highly motivated and technically proficient Software Engineer with a strong foundation ni software development principles and a passion for problem-solving. Skilled ni multiple programming languages and dedicated to delivering high-quality software solutions. Eager to contribute to dynamic development teams and expand my knowledge ni the field.</p>
-            </section>
-        <section id="portfolio">
-            <h2>~ My Work ~</h2>
-            <div class="project" id="project1">Project 1</div>
-            <div class="project" id="project2">Project 2</div>
-            <div class="project" id="project3">Project 3</div>
-            <div class="project" id="project4">Project 4</div>        
-        </section>
-        <section id="contact">
-            <h2>~ Keep in Touch ~</h2>
-            <button class="btn btn-default td-btn outline white">Send me a message!</button>
-        </section>
-    </main>
-   
+  <header class="header-background">
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="header-content">
+      <img src="logo.jpg" alt="Profile photo of Bishwo Karki" />
+      <h1>Hi, I'm Bishwo Karki</h1>
+      <p>Mobile Developer | Designer | Tech Enthusiast</p>
+    </div>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>~ About Me ~</h2>
+      <img src="me.jpg" alt="Bishwo Karki smiling" class="profile-photo" />
+      <p>I love solving real-world problems through technology that positively impacts lives at scale. I’ve led and contributed to various mobile applications across industries.</p>
+      <p>I'm a highly motivated and technically proficient software engineer with a strong foundation in development principles. Skilled in multiple programming languages, I'm dedicated to building robust, high-quality software solutions and continuously growing in the tech space.</p>
+    </section>
+
+    <section id="portfolio">
+      <h2>~ My Work ~</h2>
+      <div class="project" id="project1"><h3>Project 1</h3><p>Short description of the project.</p></div>
+      <div class="project" id="project2"><h3>Project 2</h3><p>Short description of the project.</p></div>
+      <div class="project" id="project3"><h3>Project 3</h3><p>Short description of the project.</p></div>
+      <div class="project" id="project4"><h3>Project 4</h3><p>Short description of the project.</p></div>
+    </section>
+
+    <section id="contact">
+      <h2>~ Keep in Touch ~</h2>
+      <a href="mailto:bishwo@example.com" class="btn btn-default td-btn outline white">Send me a message!</a>
+    </section>
+  </main>
 </body>
 </html>
