--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
   <!-- Open Graph for social sharing -->
   <meta property="og:title" content="Bishwo Karki | Mobile Developer Portfolio" />
   <meta property="og:description" content="Explore Bishwo Karki's mobile app projects, design work, and contact info. Passionate about tech and creative solutions." />
-  <meta property="og:image" content="https://yourusername.github.io/logo.jpg" />
-  <meta property="og:url" content="https://yourusername.github.io/" />
+  
+  <meta property="og:url" content="https://www.karkibishwo.com.np" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Bishwo Karki | Mobile Developer Portfolio" />
   <meta name="twitter:description" content="Discover apps and projects built by Bishwo Karki, a passionate mobile developer and tech enthusiast." />
-  <meta name="twitter:image" content="https://yourusername.github.io/logo.jpg" />
+
+  <meta name="robots" content="index, follow">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://yourusername.github.io/" />
+  <link rel="canonical" href="https://www.karkibishwo.com.np" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
@@ -66,5 +67,15 @@
       <a href="mailto:bishwo@example.com" class="btn btn-default td-btn outline white">Send me a message!</a>
     </section>
   </main>
+  <footer>
+    <h2>Find Me Online</h2>
+    <ul class="social-links">
+      <li><a href="https://github.com/bishwokarki71" target="_blank" rel="noopener">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/bishwokarki71" target="_blank" rel="noopener">LinkedIn</a></li>
+      <li><a href="https://x.com/bishwokarki71" target="_blank" rel="noopener">Twitter</a></li>
+    </ul>
+  </footer>
+  
 </body>
+
 </html>
