--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="Bishwo Karki is a mobile developer, designer, and tech enthusiast building innovative, user-centric mobile apps." />
-  <meta name="keywords" content="Bishwo Karki, Mobile Developer, Flutter, Software Engineer, Portfolio, Tech Enthusiast, GitHub Pages" />
+  <meta name="keywords" content="Bishwo Karki, Mobile Developer, Flutter, Software Engineer, Portfolio, Tech Enthusiast, GitHub Pages, Bishow karki, Bishwo, Bishow" />
   <meta name="author" content="Bishwo Karki" />
 
   <!-- Open Graph for social sharing -->
